--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-#?????? ?????
+# \u5173\u95ED\u9ED8\u8BA4\u56FE\u6807
 #spring.mvc.favicon.enabled=false
 
-#?????????
+# \u5173\u95ED\u6A21\u677F\u5F15\u64CE\u7684\u7F13\u5B58
 spring.thymeleaf.cache=false
 
-#??????
+# \u8BBE\u7F6E\u865A\u62DF\u76EE\u5F55
 server.servlet.context-path=/kuang
+
+# \u56FD\u9645\u5316\u914D\u7F6E
+# \u6211\u4EEC\u914D\u7F6E\u6587\u4EF6\u7684\u771F\u5B9E\u4F4D\u7F6E
+spring.messages.basename=i18n/login
+#spring.messages.encoding=UTF-8
