--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ server.servlet.context-path=/kuang
 # \u6211\u4EEC\u914D\u7F6E\u6587\u4EF6\u7684\u771F\u5B9E\u4F4D\u7F6E
 spring.messages.basename=i18n/login
 #spring.messages.encoding=UTF-8
+
+spring.mvc.format.date=yyyy-MM-dd
