--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 spring.thymeleaf.cache=false
 
 # \u8BBE\u7F6E\u865A\u62DF\u76EE\u5F55
-server.servlet.context-path=/kuang
+server.servlet.context-path=/chi
 
 # \u56FD\u9645\u5316\u914D\u7F6E
 # \u6211\u4EEC\u914D\u7F6E\u6587\u4EF6\u7684\u771F\u5B9E\u4F4D\u7F6E
